--- a/Manuscript/plot_figures.Rmd
+++ b/Manuscript/plot_figures.Rmd
@@ -11,7 +11,6 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook associated with I
 ```{r}
 library(data.table)
 library(ggplot2)
-library(reshape)
 library(RColorBrewer)
 library(dplyr)
 library(ggalluvial)
@@ -25,7 +24,7 @@ source('plot_figure.R')
 
 # Set the data folder
 ```{r}
-data_folder <- '~/Dropbox/AXL/Projects/ImmClassifier/Manuscript/data_for_figure_plots/'
+data_folder <- 'C:\\Users/annaf/Dropbox/AXL/Projects/ImmClassifier/Manuscript/data_for_figure_plots/'
 ```
 
 # Figure 3
@@ -411,7 +410,7 @@ brca3p_clsnames <- data.table(readRDS(paste(data_folder, 'metadata/BRCA-DP-clust
 setkey(brca3p_clsnames, ClusterID)
 setkey(brca3p_meta, cellid)
 
-# load prediction results from ImmClassifier, SingleR and Garnett
+# load prediction results from ImmClassifier, SingleR and Garnett, baseline
 brca3p_immc <- fread(paste(data_folder,'immc/brca3p.output.txt', sep = "/"))
 
 load(paste(data_folder,'singleR/singler_brca3p.RData', sep = "/"))
@@ -421,6 +420,12 @@ brca3p_singler_dt <- data.table(cell=singler$singler[[1]]$SingleR.single$cell.na
 brca3p_garnett_extend  <- readRDS(paste(data_folder,'garnett/brca.3p.garnett.extend.rds', sep = "/"))
 brca3p_garnett_extend_dt <- data.table(cell=brca3p_garnett_extend$cellid, 
                                        garnett=brca3p_garnett_extend$cluster_ext_type)
+
+
+brca3p_immc_ctrl <- fread(paste(data_folder,'immc_ctrl/brca3p.output.txt', sep = "/"))
+colnames(brca3p_immc_ctrl)[2] <- 'ctrl'
+
+
 # load UMAP coordinates
 brca3p_umap <- fread(paste(data_folder,'umap/out-brca3p_umap/models//umap.pca_0500.cluster_25.k_25.res_1.0.umap_25/coordinates.txt', sep = "/"))
 
@@ -431,12 +436,15 @@ brca3p_umap <- fread(paste(data_folder,'umap/out-brca3p_umap/models//umap.pca_05
 ```{r}
 
 # Combine all prediction results and the original annotation into one data table
-brca3p_dt <- data.table(merge(
+brca3p_dt <- data.table(
+        merge(
+          merge(
               merge(
                 merge(brca3p_umap[, .(Cell, UMAP1, UMAP2, Cluster)], 
                       brca3p_immc, by.x='Cell', by.y='Cell', all.x = T),
                 brca3p_singler_dt, by.x='Cell', by.y='cell', all.x = T),
-                  brca3p_garnett_extend_dt, by.x='Cell', by.y='cell', all.x = T) # use extended mode prediction
+              brca3p_garnett_extend_dt, by.x='Cell', by.y='cell', all.x = T),
+          brca3p_immc_ctrl, by.x = 'Cell', by.y = 'Cell', all.x = T)# use extended mode prediction
               )[, original_annotation:=brca3p_clsnames[brca3p_meta[Cell, cluster], Final_annotation]]
                   
 brca3p_dt[, Cluster:=as.character(Cluster)]
@@ -495,11 +503,33 @@ brca3p_dt[grepl("NK", garnett), garnett:="NK"]
 brca3p_dt[grepl("T cells", garnett), garnett:="T"]
 brca3p_dt[grepl("Unknown", garnett), garnett:="Unassigned"]
 
+
+# rename Ctrl output cell types
+
+brca3p_dt[grepl("B", ctrl), ctrl:="B"]
+brca3p_dt[grepl("NK", ctrl), ctrl:="NK"]
+brca3p_dt[ctrl=='L:pDC', ctrl:="pDC"]
+brca3p_dt[ctrl=='M:pDC', ctrl:="pDC"]
+brca3p_dt[ctrl=='L:pDC;M:pDC', ctrl:="pDC"]
+brca3p_dt[ctrl=='M:cDC', ctrl:="mDC"]
+
+brca3p_dt[grepl("reg", ctrl), ctrl:="Treg"]
+brca3p_dt[grepl("CD4", ctrl), ctrl:="CD4+T"]
+brca3p_dt[grepl("CD8", ctrl), ctrl:="CD8+T"]
+brca3p_dt[grepl("Mono", ctrl), ctrl:="MONOCYTE"]
+brca3p_dt[grepl("Mac", ctrl), ctrl:="MACROPHAGE"]
+brca3p_dt[grepl("Mast", ctrl), ctrl:="MAST"]
+brca3p_dt[grepl("Neu", ctrl), ctrl:="NEUTROPHIL"]
+
+
+
+
 # handle prediction tool-unique and unassigned cell types
 brca3p_dt[!ImmC %in% brca3p_celltypes, ImmC:= "Other"]
 brca3p_dt[is.na(SingleR), SingleR:= "Unassigned"]
 brca3p_dt[!SingleR %in% brca3p_celltypes, SingleR:= "Other"]
 brca3p_dt[!garnett %in% brca3p_celltypes, garnett:= "Other"]
+brca3p_dt[!ctrl %in% brca3p_celltypes, ctrl:= "Other"]
 ```
 
 ## Figure 5a. subsample cells to make visualization clear
@@ -509,7 +539,7 @@ set.seed(100)
 brca3p_subset_dt <- brca3p_dt[brca3p_dt[,sample(Cell, 200, replace = T) ,by=original_annotation][, V1],]
 brca3p_subset_dt[, random:=brca3p_subset_dt$original_annotation[sample(1:nrow(brca3p_subset_dt), nrow(brca3p_subset_dt))]]
 
-order_methods <- c('original_annotation', 'random', 'ImmC', 'SingleR', 'garnett')
+order_methods <- c('original_annotation', 'random', 'ctrl', 'ImmC', 'SingleR', 'garnett')
 
 f5a <- melt(brca3p_subset_dt,
      id.vars = c('Cell', 'UMAP1', 'UMAP2', 'Cluster')) %>%
@@ -529,7 +559,7 @@ f5a <- melt(brca3p_subset_dt,
           strip.text.x = element_text(size = 10, colour = "black", angle = 0)) +
     coord_equal () + 
     scale_color_manual(values = c(colorRampPalette(brewer.pal(12, "Paired"))(13), 'lightgrey', 'black'),guide = guide_legend(nrow=3,override.aes = list(size=4))) +
-    facet_wrap(~variable, ncol = 5)
+    facet_wrap(~variable, ncol = 3)
 
 f5a
 ```
@@ -586,7 +616,7 @@ f5c <- brca3p_subset_dt[, .N, by = c('ImmC', 'SingleR', 'original_annotation')] 
          SingleR = factor(SingleR, levels = brca3p_celltypes_alluvium),
          original_annotation = factor(original_annotation, levels = brca3p_celltypes_alluvium)
          ) %>%
-ggplot(aes(axis1 = ImmC, axis2 = original_annotation, axis3 = SingleR,y = N)) +
+ggplot(aes( axis1 = ImmC, axis2 = original_annotation, axis3 = SingleR,y = N)) +
   scale_x_discrete(limits = c('ImmC', 'original_annotation', 'SingleR'), expand = c(.1, 0)) +
   scale_fill_manual(values =sample(colorRampPalette(brewer.pal(11, "Spectral"))(13)))+
   geom_alluvium(aes(fill = original_annotation)) +
@@ -629,17 +659,24 @@ pbmc68k_garnett_extend_dt <- data.table(Cell = rownames(pbmc68k_garnett_extend),
                                         garnett=pbmc68k_garnett_extend$cluster_ext_type)
 setkey(pbmc68k_garnett_extend_dt, Cell)
 
+
+
+pbmc68k_ctrl <- fread(paste(data_folder, 'immc_ctrl/pbmc68k.output.txt', sep = "/"))
+colnames(pbmc68k_ctrl)[2] <- 'ctrl'
 pbmc68k_umap <- fread(paste(data_folder,'umap/out-pbmc_umap/models/umap.pca_1000.cluster_10.k_25.res_0.8.umap_25/coordinates.txt', sep = "/"))
 setkey(pbmc68k_umap, Cell)
 
 
 
-pbmc68k_dt <- data.table(merge(
+pbmc68k_dt <- data.table(
+      merge(
+          merge(
               merge(
                 merge(pbmc68k_umap[, .(Cell, UMAP1, UMAP2, Cluster)], 
                       pbmc68k_immc, by.x='Cell', by.y='Cell', all.x = T),
                 pbmc68k_singler_dt, by.x='Cell', by.y='Cell', all.x = T),
-                  pbmc68k_garnett_extend_dt, by.x='Cell', by.y='Cell', all.x = T)
+                  pbmc68k_garnett_extend_dt, by.x='Cell', by.y='Cell', all.x = T),
+          pbmc68k_ctrl, by.x = 'Cell', by.y='Cell', all.x=T)
               )[, original_annotation:=pbmc68k_meta[Cell, 'celltype']]
                   
 pbmc68k_dt[, Cluster:=as.character(Cluster)]
@@ -694,10 +731,28 @@ pbmc68k_dt[grepl("NK", garnett), garnett:="CD56+ NK"]
 pbmc68k_dt[grepl("B cells", garnett), garnett:="CD19+ B"] 
 
 
+pbmc68k_dt[grepl("M:Mono", ctrl), ctrl:="CD14+ Monocyte"]
+pbmc68k_dt[grepl("L:B", ctrl), ctrl:="CD19+ B"]
+pbmc68k_dt[grepl("CD34", ctrl), ctrl:="CD34+"]
+pbmc68k_dt[grepl("L:T:CD4:Na", ctrl), ctrl:="CD4+/CD45RA+/CD25- Naive T"]      
+pbmc68k_dt[grepl("L:T:CD8:Na", ctrl), ctrl:="CD8+/CD45RA+ Naive Cytotoxic"]      
+pbmc68k_dt[grepl("L:T:CD4:CM|L:T:CD4:EM", ctrl), ctrl:="CD4+/CD45RO+ Memory"]
+pbmc68k_dt[grepl("L:T:CD8:CM|L:T:CD8:EM", ctrl), ctrl:="CD8+ memory"]
+pbmc68k_dt[grepl("NK", ctrl), ctrl:="CD56+ NK"]
+pbmc68k_dt[grepl("L:T:CD4:Tfh", ctrl), ctrl:="CD4+ T Helper2"]
+pbmc68k_dt[grepl("L:T:CD4:Treg", ctrl), ctrl:="CD4+/CD25 T Reg"]
+pbmc68k_dt[grepl("L:NK", ctrl), ctrl:="CD56+ NK"]
+pbmc68k_dt[grepl("cDC|pDC", ctrl), ctrl:="Dendritic"]
+
+
+
+
+
 pbmc68k_dt[!ImmC %in% pbmc68k_celltypes, ImmC:= "Other"]
 pbmc68k_dt[is.na(SingleR), SingleR:= "Unassigned"]
 pbmc68k_dt[!SingleR %in% pbmc68k_celltypes, SingleR:= "Other"]
 pbmc68k_dt[!garnett %in% pbmc68k_celltypes, garnett:= "Other"]
+pbmc68k_dt[!ctrl %in% pbmc68k_celltypes, ctrl:= "Other"]
 
 ```
 
@@ -811,6 +866,8 @@ hcc_garnett_extend_dt <- data.table(Cell = rownames(hcc_garnett_extend),
                                         garnett=hcc_garnett_extend$cluster_ext_type)
 setkey(hcc_garnett_extend_dt, Cell)
 
+
+hcc_immc_ctrl <- fread(paste(data_folder, 'immc_ctrl/hcc.output.txt', sep = "/"))
 
 hcc_umap <- fread(paste(data_folder,'umap/out-hcc_all_umap/models/umap.pca_0500.cluster_25.k_25.res_1.0.umap_25/coordinates.txt', sep = "/"))
 setkey(hcc_umap, Cell)
